--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "dotenv-defaults": "^5.0.2"
   },
   "scripts": {
-    "server": "nodemon src/server.js --ext js --exec babel-node"
+    "start": "nodemon src/server.js --ext js --exec babel-node"
   }
 }
